# CS230

./: .gitignore  README.md
proj-gl-files/: driver_state.cpp
proj-rt-files/: .sconsign.dblite  CMakeLists.txt  box.cpp  box.h  camera.cpp  camera.h  dump_png.cpp  flat_shader.cpp  hierarchy.cpp  hierarchy.h  main.cpp  mesh.cpp  mesh.h  object.h  parse.cpp  phong_shader.cpp  plane.cpp  plane.h  ray_tracer  reflective_shader.cpp  render_world.cpp  render_world.h  sphere.cpp  sphere.h
proj-rt-files/scene/: 30.txt  grading-script.py
